--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Backlog</title>
+    <title>Pagination</title>
     <meta charset="utf-8" />
     <base href="/">
     <meta name="viewport"
@@ -12,16 +12,11 @@
               width=device-width,
               height=device-height,
               target-densitydpi=device-dpi" />
+    
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="lib/quill.core.css" rel="stylesheet" />
-    <link href="lib/quill.snow.css" rel="stylesheet" />
-    <link href="lib/rome.min.css" rel="stylesheet" />
 </head>
-<body>
-    <ce-header></ce-header>
-    <ce-app></ce-app>
-    <ce-footer></ce-footer>
-
-    <script src="dist/app.js?v=1.0.0-alpha.0"></script>
+<body>    
+    <ce-app></ce-app>    
+    <script src="dist/app.js?v=1.0.0-alpha.1"></script>
 </body>
 </html>
