--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>    
     <ce-app></ce-app>    
-    <script src="dist/app.js?v=1.0.0-alpha.4"></script>
+    <script src="https://rawgit.com/QuinntyneBrown/pagination/master/dist/app.js?v=1.0.0-alpha.4"></script>
 </body>
 </html>
