--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>    
     <ce-app></ce-app>    
-    <script src="dist/app.js?v=1"></script>
+    <script src="libs/native-shim.js"></script>
+    <script src="dist/app.js?v=4"></script>
 </body>
 </html>
