--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
               target-densitydpi=device-dpi" />
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <style>
+        :root {
+            font-family: Montserrat,sans-serif;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
+
+        body {
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+    </style>
 </head>
 <body>    
     <ce-app></ce-app>        
