--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     </style>
 </head>
 <body>    
-    <ce-app></ce-app>        
+    <ce-app></ce-app>   
+    
+    <script src="https://rawgit.com/webcomponents/custom-elements/master/custom-elements.min.js"></script>
+    <script src="https://rawgit.com/webcomponents/shadydom/master/shadydom.min.js"></script>
+    <script src="https://rawgit.com/webcomponents/shadycss/master/shadycss.min.js"></script>
     <script src="libs/native-shim.js"></script>
     <script src="dist/app.js?v=4"></script>
 </body>
